0027185: Data Exchange - IGES - incorrect reading of DE for undefined entity

Fix reading of pointers to color entity.